# Sgchords

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.bootstrap/: part-00.py  sgchunk-00
.bootstrap-v2/: expected-sha256.txt  part-00.py  part-00a.py  part-01.py  part-02.py  part-03.py  part-04.py  part-05.py  part-06.py  part-07.py  part-08.py  part-08a.py  part-09.py  part-10.py  part-11.py  part-12.py  part-13.py  part-14.py  part-14a.py  part-14b.py  part-14c.py  part-14d.py  part-14e.py  part-14f.py  part-15.py
.github/workflows/: apply-synchronized-v2-pr.yml  apply-synchronized-v2.yml  ci.yml  commit-uv-lock.yml  finalize-uv.yml
benchmarks/: README.md  results.json  results.md
benchmarks/timelines/: amazing-grace-timeline.csv  c-major-i-iv-v-i-i-v-i.csv  c-major-i-iv-v-i.csv  hotaru-no-hikari-timeline.csv  hotaru-no-hikari.csv  i-v-vi-iv-in-c.csv  la-bamba-c-f-g7.csv  scarborough-fair-timeline.csv
scripts/: __init__.py  apply_final_fixes.py  benchmark_known_chords.py  benchmark_public_domain.py
src/sgchords/: __init__.py  analyzer.py  audio.py  chords.py  cli.py  exports.py  models.py  service.py  ui.py
tests/: test_analyzer.py  test_audio.py  test_benchmark.py  test_chords.py  test_cli.py  test_exports.py  test_ui.py
