[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sgchords"
version = "0.1.0"
description = "Best-effort chord transcription from YouTube URLs and local recordings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Legedith" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "gradio>=5.44,<7",
  "librosa>=0.11,<0.12",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scipy>=1.10,<2",
  "soundfile>=0.12,<1",
  "yt-dlp[default,curl-cffi]>=2025.1.15",
]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
sgchords = "sgchords.cli:main"
sgchords-web = "sgchords.ui:main"

[project.urls]
Repository = "https://github.com/Legedith/Sgchords"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
required-version = "0.11.29"
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
